fixed responsiveness on mobile

--- a/static/css/tic-tac-toe.css
+++ b/static/css/tic-tac-toe.css
@@ -64,7 +64,6 @@ input{
     opacity: .9;
     background-color: black;
     text-align: center;
-    padding: 10px;
 }
 
 .board-btn{
@@ -111,4 +110,9 @@ img{
     color: black;
     word-wrap: normal;
     font-size: 20px;
+}
+@media(max-width:992px) {
+    #header-div h1 {
+        font-size: 50px;
+    }
 }
